# tools-tdk

./: .gitattributes  .gitignore  .gitreview  LICENSE  LICENSES.TXT  Makefile.am  NOTICE  configure.ac  def.inc  rdk_build.sh  rdk_env.xml  tdk.service
AudioCaptureMgr_stub/include/: AudioCaptureMgrAgent.h
AudioCaptureMgr_stub/src/: AudioCaptureMgrAgent.cpp
Bluetooth_stub/include/: BluetoothAgent.h
Bluetooth_stub/src/: BluetoothAgent.cpp
ClosedCaption_stub/: Makefile  Makefile.am
ClosedCaption_stub/include/: CCAgent.h
ClosedCaption_stub/src/: CCStub.cpp
DS_stub/: Makefile  Makefile.am
DS_stub/include/: DeviceSettingsAgent.h
DS_stub/src/: DeviceSettingsAgent.cpp
DTCP_stub/: Makefile  Makefile.am
DTCP_stub/include/: dtcpagent.h
DTCP_stub/src/: dtcpagent.cpp
E2E_stub/: Makefile
E2E_stub/include/: E2EStub.h
E2E_stub/src/: E2EStub.cpp
IARMBUS_stub/: Makefile  Makefile.am
IARMBUS_stub/include/: IARMBUSAgent.h  dummytestmgr.h  gen_irevent.h  keyeventdata.h
IARMBUS_stub/src/: IARMBUSPerfStub.cpp  IARMBUSStub.cpp  Test_Event_Mgr.c  gen_irevent.cpp  gen_multiple_events.cpp  gen_single_event.c  gen_single_event.cpp  tst_iarmbus.c
LinearTv_stub/: Makefile
LinearTv_stub/include/: E2ELinearTV.h
LinearTv_stub/scripts/: T2pTrickMode.sh  T2pTuning.sh
LinearTv_stub/src/: E2ELinearTV.cpp
MediaStreamer_stub/: Makefile  Makefile.am
MediaStreamer_stub/include/: MediaStreamerStub.h
MediaStreamer_stub/scripts/: alignRecList.sh  runPlayer.sh
MediaStreamer_stub/src/: MediaStreamerStub.cpp  PlayerApp.c
MediaUtils_stub/: Makefile.am
MediaUtils_stub/include/: MediaUtilsAgent.h
MediaUtils_stub/src/: MediaUtilsAgent.cpp
Mediaframework_stub/: Makefile  Makefile.am
Mediaframework_stub/include/: MediaframeworkAgent.h
Mediaframework_stub/scripts/: mediaframework_qamsrc_test_module_pre-script.sh  mediaframework_test_module_post-script.sh  mediaframework_test_module_pre-script.sh
Mediaframework_stub/src/: MediaframeworkAgent.cpp
MocaHal_stub/: Makefile.am
MocaHal_stub/include/: MocaHalAgent.h
MocaHal_stub/src/: MocaHalAgent.cpp
NetSrvMgr_stub/: Makefile  Makefile.am
NetSrvMgr_stub/include/: NetSrvMgrAgent.h
NetSrvMgr_stub/scripts/: netsrvmgr_test_module_pre-script.sh
NetSrvMgr_stub/src/: NetSrvMgrAgent.cpp
OpenSourceComponent_Stub/: Makefile  Makefile.am
OpenSourceComponent_Stub/include/: opensrcteststub.h
OpenSourceComponent_Stub/src/: opensrcteststub.cpp
RDKLogger_stub/: Makefile  Makefile.am
RDKLogger_stub/include/: RDKLoggerAgent.h
RDKLogger_stub/src/: RDKLoggerAgent.cpp
Recorder_stub/: Makefile  Makefile.am
Recorder_stub/include/: RecorderStub.h
Recorder_stub/src/: Recorderstub.cpp
SM_stub/: Makefile  Makefile.am  configure.ac  servicemanager_tdk.pro
SM_stub/cfg/: TODO
SM_stub/include/: ServiceManagerAgent.h
SM_stub/src/: ServiceManagerAgent.cpp  sm_stub_lib.pro
SM_stub/test/: sm_qapp.cpp  sm_qapp.h  sm_qapp.pro
SNMP_stub/include/: SNMPProtocolAgent.h
SNMP_stub/src/: SNMPProtocolAgent.cpp
SysUtil_stub/: Makefile.am
SysUtil_stub/include/: SysUtil_stub.h
SysUtil_stub/src/: SysUtil_stub.cpp
SystemUtil_stub/: Makefile.am
SystemUtil_stub/include/: SystemUtil_stub.h
SystemUtil_stub/scripts/: Optimusprime_testrunner.sh  Spark_testrunner.sh  rne_sdk_install.sh
SystemUtil_stub/src/: SystemUtil_stub.cpp
TDKIntegration_Stub/: Makefile  Makefile.am
TDKIntegration_Stub/include/: TDKIntegrationStub.h
TDKIntegration_Stub/scripts/: tdkintegration_test_module_pre-script.sh
TDKIntegration_Stub/src/: TDKIntegrationStub.cpp
TDK_Automation_Scripts/: README.txt
TDK_Automation_Scripts/python-lib/: consoleLogTransfer.py  devicestatus.py  dvrlib.py  getDevices.py  getRDKVersion.py  recorderlib.py  recordinglib.py  resetAgent.py  setRoute.py  streamlib.py  tdklib.py
TDK_Automation_Scripts/twc_automation/: TdkConfig.xml  TdkTestExecuter.py  commonTestScript.py  generateCSVfile.py  generateXLSfile.py  getTWCRDKTDKVersion.py  setEnvironmentVariable.py  validateTdkConfig.py  xml_check.sh
TR069_stub/: Makefile  Makefile.am
TR069_stub/include/: TR069Agent.h
TR069_stub/src/: TR069Agent.cpp
TRM_stub/: Makefile  Makefile.am
TRM_stub/include/: TRMAgent.h  TRMAgentHelper.h  TunerReservationHelper.h
TRM_stub/src/: TRMAgent.cpp  TRMAgentHelper.cpp  TunerReservationHelper.cpp
WIFIHAL_stub/include/: WIFIHAL.h
WIFIHAL_stub/src/: WIFIHAL.cpp
XUPNP_stub/: Makefile  Makefile.am
XUPNP_stub/include/: xupnpAgent.h
XUPNP_stub/src/: xupnpAgent.cpp
agent/: Makefile  Makefile.am
agent/include/: rdktestagentintf.h  rdkteststubintf.h  rpcmethods.h
agent/scripts/: TDK_version.txt  configure_iptables.sh  file_copy.sh  flush_iptables.sh  get_moca_devices.sh  output_json_parser.sh  runSysStat.sh
agent/src/: agentmain.cpp  rpcmethods.cpp
cfg/: Makefile.am  TODO
e2e_rmf_stub/include/: e2e_rmf_agent.h
e2e_rmf_stub/src/: e2e_rmf_agent.cpp
framework/: application.properties
gstPluginsRdk_check/: Makefile  Makefile.am
gstPluginsRdk_check/src/: gst_plugins_rdk.c
gstPluginsRdk_stub/: Makefile  Makefile.am
gstPluginsRdk_stub/include/: gstPluginsRdkAgent.h
gstPluginsRdk_stub/src/: gstPluginsRdkAgent.cpp
gstreamerCustomTests/gst-plugin-base/: Makefile  (+24 more)
moduleXML/: servicemanager-module.xml
mysql-database/: rdkproddumpJuly9.sql  rdktdk-db-creation.sql  rdktestproddbdump.sql  rdktestproddbdump_03June2014.sql  rdktestproddbm2dump.sql
python-lib/: consoleLogTransfer.py  getDevices.py  getRDKVersion.py  recorderlib.py  recordinglib.py  resetAgent.py  setRoute.py  streamlib.py  tdklib.py
qtWebkitCustomTests/: Makefile  build.sh  buildall.sh  cleanall.sh  linux.conf  moveall.sh  twctests.pri  util.h
results/: README
rmfApp_stub/: Makefile  Makefile.am
rmfApp_stub/include/: rmfAppteststub.h
rmfApp_stub/src/: rmfappteststub.cpp
rpm/: README.txt  master_rpm.sh
rpm/SRPMS/: TODO  (+1 more)
stub/: TDK_Build_Readme.txt  rdk_build.sh  rdk_env.xml
tdkRmfApp/: Makefile  Makefile.am  tdkRmfApp.cpp
tdkb-mysql-database/: rdktestproddbdump.sql
tdkbframework/: .classpath  .project  application.properties
(+4967 files in other folders)
