## Copyright (c) 2013 Comcast. All rights reserved.

SUBDIRS = agent IARMBUS_stub SM_stub DS_stub ClosedCaption_stub RDKLogger_stub TDKIntegration_Stub gstPluginsRdk_check gstPluginsRdk_stub Recorder_stub \
TR069_stub OpenSourceComponent_Stub tdkRmfApp TRM_stub $(PLUGIN_SRC)
DIST_SUBDIRS = @SUBDIRS@

distcleancheck_listfiles = *-libtool
