## Copyright (c) 2013 Comcast. All rights reserved.

SUBDIRS = agent IARMBUS_stub DS_stub ClosedCaption_stub RDKLogger_stub TDKIntegration_Stub \
OpenSourceComponent_Stub XUPNP_stub $(SUBDIR_HYBRID) $(SUBDIR_CLIENT) $(PLUGIN_SRC) $(SUBDIR_CLIENT_XI3V2) $(SUBDIR_XG1V3)
DIST_SUBDIRS = @SUBDIRS@

distcleancheck_listfiles = *-libtool
