# ============================================================================
# RDK MANAGEMENT, LLC CONFIDENTIAL AND PROPRIETARY
# ============================================================================
# This file (and its contents) are the intellectual property of RDK Management, LLC.
# It may not be used, copied, distributed or otherwise  disclosed in whole or in
# part without the express written permission of RDK Management, LLC.
# ============================================================================
# Copyright (c) 2016 RDK Management, LLC. All rights reserved.
# ============================================================================
SUBDIRS = agent IARMBUS_stub DS_stub RDKLogger_stub \
XUPNP_stub SystemUtil_stub $(SUBDIR_HYBRID) $(SUBDIR_CLIENT) $(PLUGIN_SRC) $(SUBDIR_CLIENT_XI3V2) $(SUBDIR_XG1V3) $(SUBDIR_XI5) \
$(SUBDIR_CLIENT_XI5)
DIST_SUBDIRS = @SUBDIRS@

distcleancheck_listfiles = *-libtool
